0.4:
  add primitive ftp support (default: enabled; disable with -F!)

0.3:
  add chroot+setuid support
  compiler warnings removed (Julien Touche)
  also take time for reaping in forkbench (Niels Provos)
  fix memory and fd leaks (with Thomas Walpuski)

0.2:
  zlib support (directory listings only)
  add timeout support
  add major kludgery to work around deliberate IPv6 breakage on OpenBSD
    from that itojun maniac.  Friends don't let friends run OpenBSD!
  add httpbench

0.1:
  directory listings
  HEAD
  if-modified-since
  ranges (resume)

0.0:
  initial checkin, proof-of-concept taken from libowfat test/httpd.c